--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EG Store</title>
 
-  <!-- IMPORTANT: must be exactly this -->
-  <link rel="stylesheet" href="./styles.css" />
+  <!-- ADD ONLY: favicon (logo in browser tab) -->
+  <link rel="icon" type="image/png" href="./logo.png">
+
+  <!-- EXISTING CSS -->
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
 <header class="header">
   <div class="container header-inner">
     <a class="brand" href="./">
-      <img src="./logo.png" alt="EG Store Logo" class="brand-logo" />
+      <img src="./logo.png" alt="EG Store Logo" class="brand-logo">
       <div class="brand-text">
         <div class="brand-name">EG Store</div>
         <div class="brand-sub">Digital design services • Direct order</div>
@@ -29,263 +32,111 @@
 </header>
 
 <main>
-  <section class="hero">
-    <div class="container hero-grid">
-      <div>
-        <h1>Premium design that sells.</h1>
-        <p class="lead">
-          Choose a package below. Click <b>Buy Now</b> to view bank transfer details (IBAN & Account Number).
-        </p>
 
-        <div class="cta">
-          <a class="btn" href="#packages">View Packages</a>
-          <a class="btn ghost" href="#contact">Request Custom</a>
-        </div>
+<section class="hero">
+  <div class="container hero-grid">
+    <div>
+      <h1>Premium design that sells.</h1>
+      <p class="lead">
+        Choose a package below. Click <b>Buy Now</b> to view bank transfer details.
+      </p>
 
-        <div class="chips">
-          <span class="chip">Fast delivery</span>
-          <span class="chip">High-quality files</span>
-          <span class="chip">Revisions included</span>
-        </div>
+      <div class="cta">
+        <a class="btn" href="#packages">View Packages</a>
+        <a class="btn ghost" href="#contact">Request Custom</a>
       </div>
 
-      <div class="card">
-        <h3>How it works</h3>
-        <ol class="steps">
-          <li>Select a package.</li>
-          <li>Click <b>Buy Now</b> to show bank details.</li>
-          <li>Transfer and send confirmation.</li>
-          <li>Receive files + revisions.</li>
-        </ol>
-        <p class="muted small">Bank transfer details appear in a pop-up.</p>
+      <div class="chips">
+        <span class="chip">Fast delivery</span>
+        <span class="chip">High-quality files</span>
+        <span class="chip">Revisions included</span>
       </div>
     </div>
-  </section>
 
-  <section id="packages" class="section alt">
-    <div class="container">
-      <div class="section-head">
-        <div>
-          <h2>Packages</h2>
-          <p class="muted">Direct order via bank transfer.</p>
-        </div>
-      </div>
-
-      <div class="grid-3">
-        <article class="product card">
-          <div class="top">
-            <div>
-              <h3>Logo Starter</h3>
-              <p class="muted">Clean modern logo for startups.</p>
-            </div>
-            <div class="price">50 USD</div>
-          </div>
-          <ul class="list">
-            <li>2 concepts</li>
-            <li>2 revisions</li>
-            <li>PNG + JPG + transparent</li>
-            <li>Delivery: 2–3 days</li>
-          </ul>
-          <a class="btn full" href="#" data-name="Logo Starter" data-price="50 USD">Buy Now</a>
-        </article>
-
-        <article class="product card">
-          <div class="top">
-            <div>
-              <h3>Social Pack (10 Posts)</h3>
-              <p class="muted">Premium posts with your branding.</p>
-            </div>
-            <div class="price">100 USD</div>
-          </div>
-          <ul class="list">
-            <li>10 posts</li>
-            <li>1 story template</li>
-            <li>2 revisions</li>
-            <li>Delivery: 2–4 days</li>
-          </ul>
-          <a class="btn full" href="#" data-name="Social Pack (10 Posts)" data-price="100 USD">Buy Now</a>
-        </article>
-
-        <article class="product card">
-          <div class="top">
-            <div>
-              <h3>Discord Server Design</h3>
-              <p class="muted">Full Discord branding pack.</p>
-            </div>
-            <div class="price">80 USD</div>
-          </div>
-          <ul class="list">
-            <li>Banner + icon</li>
-            <li>3–6 panels</li>
-            <li>Basic role icons</li>
-            <li>Delivery: 2–5 days</li>
-          </ul>
-          <a class="btn full" href="#" data-name="Discord Server Design" data-price="80 USD">Buy Now</a>
-        </article>
-      </div>
-
-      <div class="policy-bar">
-        <a href="./privacy.html">Privacy</a><span>•</span>
-        <a href="./terms.html">Terms</a><span>•</span>
-        <a href="./refund.html">Refund</a><span>•</span>
-        <a href="./contact.html">Contact</a>
-      </div>
+    <div class="card">
+      <h3>How it works</h3>
+      <ol class="steps">
+        <li>Select a package.</li>
+        <li>Click Buy Now to view bank details.</li>
+        <li>Transfer and send confirmation.</li>
+        <li>Receive files + revisions.</li>
+      </ol>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact</h2>
-      <p class="muted">Send your requirements + references to start.</p>
+<section id="packages" class="section alt">
+  <div class="container">
+    <h2>Packages</h2>
+    <p class="muted">Direct order via bank transfer.</p>
 
-      <div class="grid-3">
-        <div class="card">
-          <h3>Email</h3>
-          <p class="muted"><b>7moty4050@gmail.com</b></p>
+    <div class="grid-3">
+
+      <article class="product card">
+        <div class="top">
+          <h3>Logo Starter</h3>
+          <div class="price">50 USD</div>
         </div>
-        <div class="card">
-          <h3>WhatsApp</h3>
-          <p class="muted"><b>+21208519473</b></p>
+        <p class="muted">Clean modern logo for startups.</p>
+        <ul class="list">
+          <li>2 concepts</li>
+          <li>2 revisions</li>
+          <li>PNG + JPG + transparent</li>
+          <li>Delivery: 2–3 days</li>
+        </ul>
+        <a class="btn full" href="#" data-name="Logo Starter" data-price="50 USD">Buy Now</a>
+      </article>
+
+      <article class="product card">
+        <div class="top">
+          <h3>Social Pack (10 Posts)</h3>
+          <div class="price">100 USD</div>
         </div>
-        <div class="card">
-          <h3>Response time</h3>
-          <p class="muted">Within 24 hours</p>
+        <p class="muted">Premium posts with your branding.</p>
+        <ul class="list">
+          <li>10 posts</li>
+          <li>1 story template</li>
+          <li>2 revisions</li>
+          <li>Delivery: 2–4 days</li>
+        </ul>
+        <a class="btn full" href="#" data-name="Social Pack (10 Posts)" data-price="100 USD">Buy Now</a>
+      </article>
+
+      <article class="product card">
+        <div class="top">
+          <h3>Discord Server Design</h3>
+          <div class="price">80 USD</div>
         </div>
-      </div>
+        <p class="muted">Full Discord branding pack.</p>
+        <ul class="list">
+          <li>Banner + icon</li>
+          <li>3–6 panels</li>
+          <li>Basic role icons</li>
+          <li>Delivery: 2–5 days</li>
+        </ul>
+        <a class="btn full" href="#" data-name="Discord Server Design" data-price="80 USD">Buy Now</a>
+      </article>
+
     </div>
-  </section>
+  </div>
+</section>
+
+<section id="contact" class="section">
+  <div class="container">
+    <h2>Contact</h2>
+    <p>Email: <b>7moty4050@gmail.com</b></p>
+    <p>WhatsApp: <b>+21208519473</b></p>
+  </div>
+</section>
+
 </main>
 
 <footer class="footer">
   <div class="container footer-inner">
-    <div class="muted small">© <span id="y"></span> EG Store</div>
-    <div class="muted small">Bank transfer • Direct order</div>
+    <div>© EG Store</div>
+    <div>Bank transfer • Direct order</div>
   </div>
 </footer>
-
-<!-- ===== Modal (Bank Transfer) ===== -->
-<div id="overlay" class="overlay" aria-hidden="true"></div>
-
-<div id="modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-hidden="true">
-  <div class="modal-top">
-    <div>
-      <h3 id="modalTitle">Bank Transfer Details</h3>
-      <p class="muted small" id="modalSub">Transfer the amount using the details below</p>
-    </div>
-    <button class="icon-btn" id="closeBtn" aria-label="Close">✕</button>
-  </div>
-
-  <div class="modal-body">
-    <div class="info-row">
-      <div class="label">Service</div>
-      <div class="value" id="serviceName">—</div>
-    </div>
-    <div class="info-row">
-      <div class="label">Amount</div>
-      <div class="value" id="servicePrice">—</div>
-    </div>
-
-    <hr class="line" />
-
-    <div class="copy-block">
-      <div class="copy-head">
-        <div>
-          <div class="label">IBAN</div>
-          <div class="value mono" id="ibanText">EG210037002708181020671629935</div>
-        </div>
-        <button class="btn ghost" type="button" id="copyIban">Copy</button>
-      </div>
-      <div class="status" id="ibanStatus"></div>
-    </div>
-
-    <div class="copy-block">
-      <div class="copy-head">
-        <div>
-          <div class="label">Account Number</div>
-          <div class="value mono" id="accText">1020671629935</div>
-        </div>
-        <button class="btn ghost" type="button" id="copyAcc">Copy</button>
-      </div>
-      <div class="status" id="accStatus"></div>
-    </div>
-
-    <p class="muted small note">
-      After transferring, send a screenshot of the transfer + your order details via WhatsApp or Email.
-    </p>
-  </div>
-
-  <div class="modal-actions">
-    <button class="btn ghost full" type="button" id="closeBtn2">Close</button>
-  </div>
-</div>
-
-<script>
-  // Footer year
-  document.getElementById("y").textContent = new Date().getFullYear();
-
-  // Modal elements
-  const overlay = document.getElementById("overlay");
-  const modal   = document.getElementById("modal");
-  const serviceName = document.getElementById("serviceName");
-  const servicePrice = document.getElementById("servicePrice");
-
-  const ibanStatus = document.getElementById("ibanStatus");
-  const accStatus  = document.getElementById("accStatus");
-
-  function openModal(name, price){
-    serviceName.textContent = name;
-    servicePrice.textContent = price;
-    ibanStatus.textContent = "";
-    accStatus.textContent = "";
-
-    overlay.classList.add("show");
-    modal.classList.add("show");
-    overlay.setAttribute("aria-hidden","false");
-    modal.setAttribute("aria-hidden","false");
-  }
-
-  function closeModal(){
-    overlay.classList.remove("show");
-    modal.classList.remove("show");
-    overlay.setAttribute("aria-hidden","true");
-    modal.setAttribute("aria-hidden","true");
-  }
-
-  // Buy buttons
-  document.querySelectorAll('a.btn.full[data-name]').forEach(btn=>{
-    btn.addEventListener("click", (e)=>{
-      e.preventDefault();
-      openModal(btn.dataset.name, btn.dataset.price);
-    });
-  });
-
-  // Close actions
-  document.getElementById("closeBtn").addEventListener("click", closeModal);
-  document.getElementById("closeBtn2").addEventListener("click", closeModal);
-  overlay.addEventListener("click", closeModal);
-  document.addEventListener("keydown", (e)=>{ if(e.key === "Escape") closeModal(); });
-
-  // Copy helpers
-  async function copyFrom(id, statusEl){
-    const text = document.getElementById(id).textContent.trim();
-    try{
-      await navigator.clipboard.writeText(text);
-      statusEl.textContent = "Copied ✅";
-    }catch(_){
-      const t = document.createElement("textarea");
-      t.value = text;
-      document.body.appendChild(t);
-      t.select();
-      document.execCommand("copy");
-      document.body.removeChild(t);
-      statusEl.textContent = "Copied ✅";
-    }
-    setTimeout(()=> statusEl.textContent = "", 1200);
-  }
-
-  document.getElementById("copyIban").addEventListener("click", ()=>copyFrom("ibanText", ibanStatus));
-  document.getElementById("copyAcc").addEventListener("click", ()=>copyFrom("accText", accStatus));
-</script>
 
 </body>
 </html>
